# arbitrum-reth

./: .gitignore  Cargo.toml  NOTICE  README.md
.github/workflows/: ci.yml
crates/arb-reth-derive/: Cargo.toml
crates/arb-reth-derive/src/: batch.rs  blob.rs  delayed.rs  l2message.rs  lib.rs  message.rs  multiplexer.rs
crates/arb-reth-derive/tests/: calldata_batch_fixture.rs  delayed_accumulator_fixture.rs
crates/arb-reth-engine/: Cargo.toml
crates/arb-reth-engine/src/: engine.rs  engine_spike.rs  lib.rs  native_payload.rs
crates/arb-reth-evm/: Cargo.toml
crates/arb-reth-evm/benches/: exec_throughput.rs
crates/arb-reth-evm/src/: block.rs  config.rs  lib.rs  precompiles.rs  rpc.rs  tests.rs  tx.rs
crates/arb-reth-evm/src/block/: tests.rs
crates/arb-reth-evm/src/config/: tests.rs
crates/arb-reth-genesis/: Cargo.toml
crates/arb-reth-genesis/go-exporter/: README.md  reth-export.go
crates/arb-reth-genesis/src/: lib.rs  readers.rs  verify.rs
crates/arb-reth-genesis/tests/fixtures/: accounts_head.jsonl  addresstable_head.jsonl  index.json  retryables_head.jsonl
crates/arb-reth-l1/: Cargo.toml
crates/arb-reth-l1/src/: assemble.rs  batch_serialize.rs  beacon.rs  contracts.rs  delayed.rs  feed.rs  lib.rs  reader.rs  sync.rs
crates/arb-reth-l1/tests/: assemble.rs  batch_serialize_parity.rs  blob_fetch_fixture.rs  calldata_fetch_fixture.rs  canonical_parity_live.rs  cu_profile.rs  delayed_fetch_live.rs  derive_dump.rs  derive_range_live.rs  feed_adapter.rs  separate_batch_event_live.rs
crates/arb-reth-l1/tests/fixtures/: arb1_calldata_batch_497980_l1_tx_input.hex
crates/arb-reth-node/: Cargo.toml
crates/arb-reth-node/benches/: block_production.rs
crates/arb-reth-node/src/: addons.rs  driver.rs  engine.rs  engine_spike.rs  executor.rs  genesis.rs  hashed_db.rs  l1_sync.rs  launcher.rs  lib.rs  metrics.rs  node.rs  persist.rs  pooled.rs  resume.rs  rpc.rs
crates/arb-reth-node/src/commands/: dump_blocks.rs  genesis.rs  mod.rs  node.rs  rewind.rs  snapshot.rs
crates/arb-reth-node/tests/: engine_tree_integration.rs  rpc_integration.rs
crates/arb-reth-node/tests/fixtures/: testnode_blocks_0_17.json  testnode_feed_seq0_17.ndjson  testnode_l2_chain_config.json
crates/arb-reth-rpc/: Cargo.toml
crates/arb-reth-rpc/src/: lib.rs
crates/arb-reth-sync/: Cargo.toml
crates/arb-reth-sync/src/: l1_sync.rs  lib.rs  resume.rs
docs/: README.md
docs/chains/: README.md  robinhood-mainnet.md
docs/commands/: dump-blocks.md  genesis.md  node.md  rewind.md  snapshot.md
docs/observability/: README.md
scripts/: run-node.sh  run.env.example
testnode/: README.md  testnode-parity.sh  walk-arbos-upgrades.sh
