[workspace]
members = ["crates/*"]
resolver = "2"

# arbitrum-reth: Arbitrum/ArbOS execution wired into reth. Execution engine lives in the
# sibling `arb_revm` workspace (no reth deps); this workspace path-depends on it.

[workspace.package]
authors = ["nun"]
edition = "2024"
license = "MIT OR Apache-2.0"
repository = "https://github.com/nuntax/arb-reth"
version = "0.1.0"

[workspace.dependencies]
# Pinned to revm 41 to unify with arb_revm workspace.
revm = { version = "41.0.0", features = ["optional_priority_fee_check", "optional_balance_check", "optional_eip7623"] }
alloy-rlp = "0.3.12"
serde_json = "1.0.145"
