[package]
name = "arb-reth-derive"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

# Stage F: L1 inbox derivation. Decodes SequencerInbox batches (blob + calldata)
# into the canonical MessageWithMetadata stream: the trustless-sync half that lets the
# node reach tip standalone from L1. Pure offline decoder (no network I/O).
# See docs/stage-f-handoff.md.

[dependencies]
# Arbitrum message types from arb-alloy; alloy version unifies with reth's workspace.
arbitrum-alloy-sequencer = { git = "https://github.com/nuntax/arbitrum-alloy", rev = "5e9ec82a6b7dcf8d06d24f75d6c2bb588dd7354a", default-features = false, features = ["std"] }
alloy-primitives = "1"
alloy-rlp = { workspace = true }
# brotli is re-exported from arb_revm (which vendors it) so both crates share one brotli
# source and avoid a lockfile collision. BUSL-licensed; see the arb_revm NOTICE.
arb-revm = { git = "https://github.com/nuntax/arbitrum-revm", rev = "1b3070a2e13063256a55bff8cfaf0e9b1ea83bbc" }

[dev-dependencies]
serde_json = { workspace = true }
