[package]
name = "arb-reth-derive"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

# Stage F: L1 inbox derivation. Decodes SequencerInbox batches (blob + calldata)
# into the canonical MessageWithMetadata stream: the trustless-sync half that lets the
# node reach tip standalone from L1. Pure offline decoder (no network I/O).
# See docs/stage-f-handoff.md.

[dependencies]
# Arbitrum message types from arb-alloy; alloy version unifies with reth's workspace.
arbitrum-alloy-sequencer = { git = "https://github.com/nuntax/arbitrum-alloy", rev = "c49c1729668dbda31594b7c2524846f1c9a0bf21", default-features = false, features = ["std"] }
alloy-primitives = "1"
alloy-rlp = { workspace = true }
# brotli is re-exported from arb_revm (which vendors it) so both crates share one brotli
# source and avoid a lockfile collision. BUSL-licensed; see the arb_revm NOTICE.
arb-revm = { git = "https://github.com/nuntax/arbitrum-revm", rev = "156f3666fc54de115fb95bfd3aaba3bda9945caf" }

[dev-dependencies]
serde_json = { workspace = true }
