[package]
name = "arb-reth-derive"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

# Stage F: L1 inbox derivation. Decodes SequencerInbox batches (blob + calldata)
# into the canonical MessageWithMetadata stream: the trustless-sync half that lets the
# node reach tip standalone from L1. Pure offline decoder (no network I/O).
# See docs/stage-f-handoff.md.

[dependencies]
# Arbitrum message types from arb-alloy; alloy version unifies with reth's workspace.
arbitrum-alloy-sequencer = { git = "https://github.com/nuntax/arbitrum-alloy", rev = "f713b3c5beccb5cafa27e4123bf22e8435224102", default-features = false, features = ["std"] }
alloy-primitives = "1"
alloy-rlp = { workspace = true }
# brotli is re-exported from arb_revm (which vendors it) so both crates share one brotli
# source and avoid a lockfile collision. BUSL-licensed; see the arb_revm NOTICE.
arb-revm = { git = "https://github.com/nuntax/arbitrum-revm", rev = "49eb9df91bc79cf9f261c8472587d2de64d9fb43" }

[dev-dependencies]
serde_json = { workspace = true }
