[package]
name = "arb-reth-engine"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

# Tier-1 engine-tree driver: `ArbEngineDriver` stands up reth's `EngineApiTreeHandler` and mints
# execute-to-derive blocks via `InsertExecutedBlock` + `ForkchoiceUpdated` (no re-execution), with
# the direct engine-tree block-production path. Also owns the payload-type stubs that only exist
# to satisfy `NodeTypes::Payload` (`ArbPayloadTypes`/`ArbExecutionData`/...) and the minimal
# `ArbPayloadValidator` / `ConfigureEngineEvm` impls. Split out of `arb-reth-node`.

[dependencies]
arbitrum-alloy-consensus = { git = "https://github.com/nuntax/arbitrum-alloy", rev = "c49c1729668dbda31594b7c2524846f1c9a0bf21", default-features = false, features = ["reth"] }
arb-reth-evm = { path = "../arb-reth-evm" }
arb-revm = { git = "https://github.com/nuntax/arbitrum-revm", rev = "e5b83cecdda6321e72893a83a616e1f9981e1a5a" }
arbitrum-alloy-sequencer = { git = "https://github.com/nuntax/arbitrum-alloy", rev = "c49c1729668dbda31594b7c2524846f1c9a0bf21", default-features = false, features = ["std"] }

alloy-consensus = { version = "2.0", default-features = false }
alloy-eips = { version = "2.0", default-features = false }
alloy-primitives = { version = "1", default-features = false }
alloy-rpc-types-engine = { version = "2.0", default-features = false, features = ["serde"] }
eyre = "0.6.12"
metrics = "0.24"
serde = { version = "1", default-features = false, features = ["derive"] }
tracing = "0.1"
crossbeam-channel = "0.5"
tokio = { version = "1", features = ["rt-multi-thread", "sync", "time"] }
revm = { workspace = true }
revm-database = "41.0.0"

reth-chain-state = { git = "https://github.com/paradigmxyz/reth.git", rev = "943af245c4d69c6c1df241df016c278ffb5d15df" }
reth-consensus = { git = "https://github.com/paradigmxyz/reth.git", rev = "943af245c4d69c6c1df241df016c278ffb5d15df" }
reth-engine-primitives = { git = "https://github.com/paradigmxyz/reth.git", rev = "943af245c4d69c6c1df241df016c278ffb5d15df" }
reth-engine-tree = { git = "https://github.com/paradigmxyz/reth.git", rev = "943af245c4d69c6c1df241df016c278ffb5d15df" }
reth-evm = { git = "https://github.com/paradigmxyz/reth.git", rev = "943af245c4d69c6c1df241df016c278ffb5d15df" }
reth-execution-cache = { git = "https://github.com/paradigmxyz/reth.git", rev = "943af245c4d69c6c1df241df016c278ffb5d15df" }
reth-execution-types = { git = "https://github.com/paradigmxyz/reth.git", rev = "943af245c4d69c6c1df241df016c278ffb5d15df" }
reth-exex-types = { git = "https://github.com/paradigmxyz/reth.git", rev = "943af245c4d69c6c1df241df016c278ffb5d15df" }
reth-payload-builder = { git = "https://github.com/paradigmxyz/reth.git", rev = "943af245c4d69c6c1df241df016c278ffb5d15df" }
reth-payload-primitives = { git = "https://github.com/paradigmxyz/reth.git", rev = "943af245c4d69c6c1df241df016c278ffb5d15df" }
reth-primitives-traits = { version = "0.5.0", default-features = false }
reth-provider = { git = "https://github.com/paradigmxyz/reth.git", rev = "943af245c4d69c6c1df241df016c278ffb5d15df" }
reth-prune = { git = "https://github.com/paradigmxyz/reth.git", rev = "943af245c4d69c6c1df241df016c278ffb5d15df" }
reth-revm = { git = "https://github.com/paradigmxyz/reth.git", rev = "943af245c4d69c6c1df241df016c278ffb5d15df" }
reth-stages-api = { git = "https://github.com/paradigmxyz/reth.git", rev = "943af245c4d69c6c1df241df016c278ffb5d15df" }
reth-storage-api = { git = "https://github.com/paradigmxyz/reth.git", rev = "943af245c4d69c6c1df241df016c278ffb5d15df", features = ["db-api"] }
reth-tasks = { git = "https://github.com/paradigmxyz/reth.git", rev = "943af245c4d69c6c1df241df016c278ffb5d15df" }
reth-trie-db = { git = "https://github.com/paradigmxyz/reth.git", rev = "943af245c4d69c6c1df241df016c278ffb5d15df" }
reth-trie = { git = "https://github.com/paradigmxyz/reth.git", rev = "943af245c4d69c6c1df241df016c278ffb5d15df" }
