[package]
name = "arb-reth-engine"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

# Tier-1 engine-tree driver: `ArbEngineDriver` stands up reth's `EngineApiTreeHandler` and mints
# execute-to-derive blocks via `InsertExecutedBlock` + `ForkchoiceUpdated` (no re-execution), with
# the direct engine-tree block-production path. Also owns the payload-type stubs that only exist
# to satisfy `NodeTypes::Payload` (`ArbPayloadTypes`/`ArbExecutionData`/...) and the minimal
# `ArbPayloadValidator` / `ConfigureEngineEvm` impls. Split out of `arb-reth-node`.

[dependencies]
arbitrum-alloy-consensus = { git = "https://github.com/nuntax/arbitrum-alloy", rev = "f713b3c5beccb5cafa27e4123bf22e8435224102", default-features = false, features = ["reth"] }
arb-reth-evm = { path = "../arb-reth-evm" }
arb-revm = { git = "https://github.com/nuntax/arbitrum-revm", rev = "49eb9df91bc79cf9f261c8472587d2de64d9fb43" }
arbitrum-alloy-sequencer = { git = "https://github.com/nuntax/arbitrum-alloy", rev = "f713b3c5beccb5cafa27e4123bf22e8435224102", default-features = false, features = ["std"] }

alloy-consensus = { version = "2.0", default-features = false }
alloy-eips = { version = "2.0", default-features = false }
alloy-primitives = { version = "1", default-features = false }
alloy-rpc-types-engine = { version = "2.0", default-features = false, features = ["serde"] }
eyre = "0.6.12"
metrics = "0.24"
serde = { version = "1", default-features = false, features = ["derive"] }
tracing = "0.1"
crossbeam-channel = "0.5"
tokio = { version = "1", features = ["rt-multi-thread", "sync", "time"] }
revm = { workspace = true }
revm-database = "41.0.0"

reth-chain-state = { git = "https://github.com/nuntax/reth.git", rev = "ab273f171ad87248f0c3ea3e5f1d2600c581715f" }
reth-consensus = { git = "https://github.com/nuntax/reth.git", rev = "ab273f171ad87248f0c3ea3e5f1d2600c581715f" }
reth-engine-primitives = { git = "https://github.com/nuntax/reth.git", rev = "ab273f171ad87248f0c3ea3e5f1d2600c581715f" }
reth-engine-tree = { git = "https://github.com/nuntax/reth.git", rev = "ab273f171ad87248f0c3ea3e5f1d2600c581715f" }
reth-evm = { git = "https://github.com/nuntax/reth.git", rev = "ab273f171ad87248f0c3ea3e5f1d2600c581715f" }
reth-execution-cache = { git = "https://github.com/nuntax/reth.git", rev = "ab273f171ad87248f0c3ea3e5f1d2600c581715f" }
reth-execution-types = { git = "https://github.com/nuntax/reth.git", rev = "ab273f171ad87248f0c3ea3e5f1d2600c581715f" }
reth-exex-types = { git = "https://github.com/nuntax/reth.git", rev = "ab273f171ad87248f0c3ea3e5f1d2600c581715f" }
reth-payload-builder = { git = "https://github.com/nuntax/reth.git", rev = "ab273f171ad87248f0c3ea3e5f1d2600c581715f" }
reth-payload-primitives = { git = "https://github.com/nuntax/reth.git", rev = "ab273f171ad87248f0c3ea3e5f1d2600c581715f" }
reth-primitives-traits = { version = "0.5.0", default-features = false }
reth-provider = { git = "https://github.com/nuntax/reth.git", rev = "ab273f171ad87248f0c3ea3e5f1d2600c581715f" }
reth-prune = { git = "https://github.com/nuntax/reth.git", rev = "ab273f171ad87248f0c3ea3e5f1d2600c581715f" }
reth-revm = { git = "https://github.com/nuntax/reth.git", rev = "ab273f171ad87248f0c3ea3e5f1d2600c581715f" }
reth-stages-api = { git = "https://github.com/nuntax/reth.git", rev = "ab273f171ad87248f0c3ea3e5f1d2600c581715f" }
reth-storage-api = { git = "https://github.com/nuntax/reth.git", rev = "ab273f171ad87248f0c3ea3e5f1d2600c581715f", features = ["db-api"] }
reth-tasks = { git = "https://github.com/nuntax/reth.git", rev = "ab273f171ad87248f0c3ea3e5f1d2600c581715f" }
reth-trie-db = { git = "https://github.com/nuntax/reth.git", rev = "ab273f171ad87248f0c3ea3e5f1d2600c581715f" }
reth-trie = { git = "https://github.com/nuntax/reth.git", rev = "ab273f171ad87248f0c3ea3e5f1d2600c581715f" }
