[package]
name = "arb-reth-evm"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

# Phase 1: bridge arb_revm's Arbitrum/ArbOS execution into reth's EVM + BlockExecutor
# extension points. See docs/arb-reth-roadmap.md.

[dependencies]
arb-revm = { git = "https://github.com/nuntax/arbitrum-revm", rev = "4b9b05b37ee80f30f26d9083babe1c797377a27a", features = ["stylus"] } # pure revm/ArbOS; stylus feature is self-contained (vendors Nitro's wasmer)
revm = { workspace = true }

# Arbitrum consensus primitives (ArbTxEnvelope, ArbReceiptEnvelope, ArbHeaderInfo). reth-trait
# impls live inside arb-alloy behind the `reth` feature (orphan rule).
arbitrum-alloy-consensus = { git = "https://github.com/nuntax/arbitrum-alloy", rev = "5e9ec82a6b7dcf8d06d24f75d6c2bb588dd7354a", default-features = false, features = ["reth"] }

reth-evm = { git = "https://github.com/paradigmxyz/reth.git", rev = "224b087672690ae2ef85ad706bd18f40d8e5b265" }
alloy-evm = { version = "0.37", default-features = false }
reth-primitives-traits = { version = "0.5.0", default-features = false }

# alloy consensus traits used to lower ArbTxEnvelope into the revm tx env.
alloy-consensus = { version = "2.0", default-features = false }
alloy-eips = { version = "2.0", default-features = false }
alloy-primitives = { version = "1", default-features = false }

# rpc feature: TryIntoTxEnv and BuildPendingEnv impls for Arbitrum RPC types.
arbitrum-alloy-rpc-types = { git = "https://github.com/nuntax/arbitrum-alloy", rev = "5e9ec82a6b7dcf8d06d24f75d6c2bb588dd7354a", optional = true }
alloy-rpc-types-eth = { version = "2.0", default-features = false, optional = true }
reth-rpc-eth-api = { git = "https://github.com/paradigmxyz/reth.git", rev = "224b087672690ae2ef85ad706bd18f40d8e5b265", optional = true }

[features]
rpc = ["arbitrum-alloy-rpc-types", "alloy-rpc-types-eth", "alloy-evm/rpc", "reth-rpc-eth-api"]
