[package]
name = "arb-reth-evm"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

# Phase 1: bridge arb_revm's Arbitrum/ArbOS execution into reth's EVM + BlockExecutor
# extension points. See docs/arb-reth-roadmap.md.

[dependencies]
arb-revm = { workspace = true, features = ["stylus"] } # pure revm/ArbOS; stylus feature is self-contained (vendors Nitro's wasmer)
revm = { workspace = true }

# Arbitrum consensus primitives (ArbTxEnvelope, ArbReceiptEnvelope, ArbHeaderInfo). reth-trait
# impls live inside arb-alloy behind the `reth` feature (orphan rule).
arbitrum-alloy-consensus = { git = "https://github.com/nuntax/arbitrum-alloy", rev = "f713b3c5beccb5cafa27e4123bf22e8435224102", default-features = false, features = ["reth"] }

reth-evm = { git = "https://github.com/nuntax/reth.git", rev = "ab273f171ad87248f0c3ea3e5f1d2600c581715f" }
alloy-evm = { version = "0.37", default-features = false }
reth-primitives-traits = { version = "0.5.0", default-features = false }
metrics = "0.24"

# alloy consensus traits used to lower ArbTxEnvelope into the revm tx env.
alloy-consensus = { version = "2.0", default-features = false }
alloy-eips = { version = "2.0", default-features = false }
alloy-primitives = { version = "1", default-features = false }

# rpc feature: TryIntoTxEnv and BuildPendingEnv impls for Arbitrum RPC types.
arbitrum-alloy-rpc-types = { git = "https://github.com/nuntax/arbitrum-alloy", rev = "f713b3c5beccb5cafa27e4123bf22e8435224102", optional = true }
alloy-rpc-types-eth = { version = "2.0", default-features = false, optional = true }
reth-rpc-eth-api = { git = "https://github.com/nuntax/reth.git", rev = "ab273f171ad87248f0c3ea3e5f1d2600c581715f", optional = true }

[features]
rpc = ["arbitrum-alloy-rpc-types", "alloy-rpc-types-eth", "alloy-evm/rpc", "reth-rpc-eth-api"]

[dev-dependencies]
# Local execution-throughput calibration bench (benches/exec_throughput.rs). Benching stays local;
# CI compiles the target under --all-targets but does not run it (see codspeed backlog).
criterion = "0.5"
metrics-exporter-prometheus = "0.18"

[[bench]]
name = "exec_throughput"
harness = false
