[package]
name = "arb-reth-genesis"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

# Stage H: convert the Nitro classic-state export into a reth-readable genesis by reproducing
# Nitro's `InitializeArbosInDatabase` (via arb_revm::arbos_init) and verifying the state root.

[dependencies]
arb-revm = { git = "https://github.com/nuntax/arbitrum-revm", rev = "156f3666fc54de115fb95bfd3aaba3bda9945caf" }

alloy-primitives = { version = "1", default-features = false }
alloy-trie = { version = "0.9", default-features = false }
eyre = "0.6.12"
serde = { version = "1", default-features = false, features = ["derive"] }
serde_json = { workspace = true }

[dev-dependencies]
